Corrected gaps for sections

--- a/src/index.css
+++ b/src/index.css
@@ -58,19 +58,19 @@ header div {
     justify-content: space-between;
     align-items: center;
     gap:30px;
-    padding-bottom: 47px;
+    padding-bottom: 35px;
+    padding-top: 35px;
 }
 
 header .logo {
+    color: black;
     margin-left: 120px;
-    padding-top: 45px;
 }
 
 .header-nav ul {
     display: flex;
     gap: 30px;
-    margin-left: 110px;
-    padding-top: 35px;
+
 }
 
 header >div> button {
@@ -83,11 +83,11 @@ header >div> button {
     font-family: inherit;
     line-height: 1.2;
     text-align: center;
-    left: 500px;
     margin-right: 150px;
-    margin-top: 40px;
-    padding-left: 25px;
-    padding-top: 10px;
+    /*margin-top: 40px;*/
+    align-items: center;
+padding-left: 20px;
+    padding-bottom: 5px;
 }
 
 
@@ -134,29 +134,32 @@ button {
     font-size: 18px;
     text-transform: uppercase;
     font-weight: 100;
-    width: 150px;
-    height: 43px;
+    min-width: 150px;
     padding-top: 5px;
+    align-items: center;
 }
 
 .find-a-gift {
-    background-color: #F1F1F2;;
+    background-color: #F1F1F2;
+    width: 1440px;
 }
 
 .find-a-gift-wrapper {
-    margin-left: 125px;
-    margin-right: 170px;
+    width: 1170px;
+    padding-top: 80px;
     display: flex;
-    max-height: 700px;
+    justify-content: space-between;
+    margin-bottom: 80px;
 }
 
 .text-wrap {
-    max-height: 200px;
+    width: 441px;
+    max-height: 300px;
+    align-items: center;
 }
 
 .text-wrap h1 {
-    padding-right: 150px;
-    padding-top: 60px;
+    gap: 170px;
     font-size: 56px;
     line-height: 1.2;
 }
@@ -165,15 +168,12 @@ button {
     font-size: 20px;
     line-height: 1.4;
     color: black;
-    padding-top: 50px;
-    padding-right: 150px;
-    padding-bottom: 50px;
+    margin-top: 50px;
+    margin-right: 150px;
+   margin-bottom: 50px;
 }
 
-.text-wrap h2 {
-    margin-left: 150px;
 
-}
 
 .text-wrap button {
     background-color: transparent;
@@ -183,14 +183,11 @@ button {
 }
 
 .text-wrap-2nd h2 {
-    padding-top: 50px;
-    margin-left: 140px;
-    padding-bottom:40px;
+justify-content: space-between;
 }
 
 .text-wrap-2nd p {
-    margin-left: 140px;
-    padding-bottom: 35px;
+justify-content: space-between;
 }
 
 .text-wrap-2nd button { /* Не пробивает, почему?*/
@@ -201,14 +198,9 @@ button {
 }
 
 .img-wrap-first img{
-    padding-top: 70px;
     max-width: 570px;
     display: flex;
     padding-bottom: 130px;
-}
-
-.text-wrap:last-of-type {
-    padding-top: 140px;
 }
 
 .img-wrap img:last-of-type{
@@ -225,27 +217,28 @@ button {
 }
 
 
+.find-a-gift-wrapper div:first-of-type {
+    min-width: 430px;
+}
+
+.gifts-occasions {
+    padding-top: 96px;
+    padding-bottom: 137px;
+}
+
 .gifts-occasions h2 {
-padding-top: 80px;
     text-align: center;
     margin-right: auto;
-    padding-bottom: 30px;
 }
 
 .gifts-occasions p {
-    padding-left: 120px;
-    margin-right: 70px;
     text-align: center;
-    padding-bottom: 65px;
 }
 
 .gift-cards-wrapper ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 137px;
-    margin-left: 135px;
-    margin-right: 135px;
 }
 
 
